--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "date-fns": "^3.6.0",
+    "graphql": "^16.8.2",
+    "graphql-request": "^7.0.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
