--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "incremental": true,
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "graphql-request.d.ts"],
   "exclude": ["node_modules"]
 }
