--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.8.2",
     "graphql-request": "^7.0.1",
     "next": "14.2.3",
+    "progress": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.5",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/progress": "^2.0.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
