--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.8.2",
     "graphql-request": "^7.0.1",
     "next": "14.2.3",
+    "nextjs-progressbar": "^0.0.16",
     "progress": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
